# scarticle-satysfi

./: Makefile  README.md  scarticle-satysfi.opam  scarticle.satyh  scarticle.satyh-plain  scarticle.satyh-scsatysfi  scdummyt.satyg
sample/: sample.saty
